Fixed some security
Added @login to routes, started logic for isolated User data based off GM groups. FKed tables again sigh.

--- a/app/templates/Player_Home.html
+++ b/app/templates/Player_Home.html
@@ -186,7 +186,7 @@
 
     <!-- Display Player Currency -->
     <div class="currency-container">
-        Your Funds: <span id="playerCurrency">{{ player_currency }}</span> Gold
+        Your Funds: <span id="playerCurrency">{{ player_currency }}</span> Currency
     </div>
 
     <!-- Content Layout -->
