--- a/app/templates/GM_add_city.html
+++ b/app/templates/GM_add_city.html
@@ -96,8 +96,8 @@
 
     <!-- Button Container -->
     <div class="button-container">
-        <button class="button" onclick="window.location.href='{{ url_for('city.home') }}'">All Cities</button>
-        <button class="button" onclick="window.location.href='/'">Home</button>
+        <a href="{{ url_for('city.home') }}" class="button">All Cities</a>
+        <a href="{{ url_for('main.gm_dashboard') }}" class="button">Game Master Interface</a>
     </div>
 
     <!-- Centered Form -->
