--- a/app/templates/GM_edit_city.html
+++ b/app/templates/GM_edit_city.html
@@ -106,9 +106,9 @@
 
     <!-- Navigation Button Container -->
     <div class="button-container">
-        <button class="button" onclick="window.location.href='{{ url_for('shop.view_city_shops', city_id=city.city_id) }}'">Manage Shops</button>
-        <button class="button" onclick="window.location.href='{{ url_for('city.home') }}'">All Cities</button>
-        <button class="button" onclick="window.location.href='/'">Home</button>
+        <a href="{{ url_for('shop.view_city_shops', city_id=city.city_id) }}" class="button">Manage Shops</a>
+        <a href="{{ url_for('city.home') }}" class="button">All Cities</a>
+        <a href="{{ url_for('main.gm_dashboard') }}" class="button">Game Master Interface</a>
     </div>
 
     <!-- Centered Form -->
